# Cli-copilot-

./: pyproject.toml
.github/ISSUE_TEMPLATE/: custom.md
cli_copilot/commands/: executor.py
