[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-copilot"
version = "0.1.0"
description = "A Python CLI tool that integrates with AI models for intelligent assistance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-2.0"}
authors = [{name = "Aravind", email = "aravind@example.com"}]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
cli-copilot = "cli_copilot.main:cli"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=cli_copilot --cov-report=html"
